chapter11/enforce-memory-request/yaml/gatekeeper-policy-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequirememoryrequests
spec:
  crd:
    spec:
      names:
        kind: K8sRequireMemoryRequests
        listKind: K8sRequireMemoryRequestsList
        plural: k8srequirememoryrequests
        singular: k8srequirememoryrequests
      validation: {}
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |-
        package k8senforcememoryrequests

        violation[{"msg": msg, "details": {}}] {
          invalidMemoryRequests
          msg := "No memory requests specified"
        }

        invalidMemoryRequests {
            data.
              inventory
              .namespace
              [input.review.object.metadata.namespace]
              ["v1"]
              ["ResourceQuota"]
            
            containers := input.review.object.spec.containers
            
            ok_containers = [ok_container | 
              containers[j].resources.requests.memory ; 
              ok_container = containers[j]  ]
            
            count(containers) != count(ok_containers)
        }
